tests/rosetta/out/C/check-that-file-exists.error
cc: exit status 1
/tmp/check-that-file-exists.c: In function ‘printStat’:
/tmp/check-that-file-exists.c:93:11: error: expected ‘)’ before ‘in’
   93 |   if (path in fs) {
      |      ~    ^~~
      |           )
/tmp/check-that-file-exists.c:94:16: error: array subscript is not an integer
   94 |     if (fs.data[path]) {
      |                ^
/tmp/check-that-file-exists.c: In function ‘main’:
/tmp/check-that-file-exists.c:110:12: error: incompatible types when initializing type ‘int’ using type ‘map_string_int’
  110 |   int fs = tmp5;
      |            ^~~~
/tmp/check-that-file-exists.c:111:5: error: request for member ‘data’ in something not a structure or union
  111 |   fs.data["docs"] = 1;
      |     ^
/tmp/check-that-file-exists.c:119:15: error: incompatible type for argument 1 of ‘printStat’
  119 |     printStat(fs, p);
      |               ^~
      |               |
      |               int
/tmp/check-that-file-exists.c:92:30: note: expected ‘map_string_int’ but argument is of type ‘int’
   92 | int printStat(map_string_int fs, char *path) {
      |               ~~~~~~~~~~~~~~~^~
/tmp/check-that-file-exists.c: At top level:
/tmp/check-that-file-exists.c:123:5: error: redefinition of ‘main’
  123 | int main() {
      |     ^~~~
/tmp/check-that-file-exists.c:108:5: note: previous definition of ‘main’ with type ‘int()’
  108 | int main() {
      |     ^~~~
